1999-08-26  lav

	* edit.cc, edit.h, kern.cc, options.cc, options.h: add --config
	  option to specify ini file explicitly.

1999-07-20  lav

	* search.cc: fix backward search.

1999-07-18  lav

	* search.cc: support mmap in replace; speed up replace.
	* options.cc: fix typo.

1999-07-16  lav

	* search.cc: add $n and $x search modifiers for numeric and hex mode.
	  E.g. search for `$n 0x32 0x35 0x36' or `$x 32 35 36'.

1999-07-12  lav

	* search.cc: specify correct search limit in block replace (#) mode;
	  refresh screen before searching for next string.

1999-07-11  lav

	* user.cc: fix UserIndent when !insert.
	* highli.cc: paranoia memset to zero.

1999-06-11  lav

	* search.cc: fix backward searching for a word (was cycling);
	  restore text position before saying Not found.

1999-06-11  Adam Rogoyski <rogoyski@cs.utexas.edu>

	* le.1: correction to make whatis work.

1999-02-25  lav

	* options.cc: fix typo in ReadConf

1999-02-15  lav

	* edit.cc, mainmenu.cc, keymap.cc: don't include signal.h
	* signals.cc: reset alarm handler for safety
	* colormnu.cc: check for ncurses version before repainting screen
	* options.cc, options.h: check if .le.ini belongs to current user
	* signals.cc: make disable_resize bool (removes a warning)

1999-02-05  lav

	* about.cc: update year
	* clipbrd.cc: (Copy) speed optimized
	* kern.cc: (GetBlock) new function - copy region to buffer
	* textpoin.cc: (FindOffset) fix condition in near point search
	* block.cc: (RCopy) save/restore stdcol
	* pipe.cc: checkpoint before filtering to undelete only old block.
	* signals.cc: dump core on SIGSEGV and SIGBUS (to help debugging)
	* menu.cc, window.cc, user.cc, screen.cc: use n_attr instead of attr
	  to avoid warning about name collision.

1998-12-16  lav

	* screen.cc: alloc at least 80 columns in hex mode to avoid checking
	  for end of screen
	* mainmenu.cc: add FormatFunc
	* keymapdf.cc: change keol to kel

1998-11-30  lav

	* calc.cc: rename struct func to avoid warning.