@@ -102,6 +102,7 @@ ActionNameRec  ActionNameTable[]=
    {BLOCK_FUNC_BAR,"block-functions"},
    {MARK_LINE,"mark-line"},
    {MARK_TO_EOL,"mark-to-eol"},
+   {START_DRAG_MARK,"start-drag-mark"},
 
 // Search
    {SEARCH_FORWARD,"search-forward"},
