@@ -1,3 +1,9 @@
+1999-09-08  lav
+
+	* user.cc: do PreUserEdit in UserStartDragMark to deal with text mode.
+	* mainmenu.cc: add drag-mark.
+	* keymap.cc, keymap.h, keymapfn.cc: add start-drag-mark action.
+
 1999-08-26  lav
 
 	* edit.cc, edit.h, kern.cc, options.cc, options.h: add --config
